<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_inicio" />

    <item
        android:id="@+id/nav_clientes"
        android:icon="@drawable/ic_client"
        android:title="@string/menu_clientes" />

    <item
        android:id="@+id/nav_prestamos"
        android:icon="@drawable/ic_loan"
        android:title="@string/menu_prestamos" />

    <item
        android:id="@+id/nav_cobros"
        android:icon="@drawable/ic_payment"
        android:title="@string/menu_cobros" />

    <item
        android:id="@+id/nav_contratos"
        android:icon="@drawable/ic_contrato"
        android:title="@string/menu_contratos" />
</menu>